--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="canonical" href="https://3damp.github.io/pwa-tests-1/" />
+    <link rel="manifest" href="/pwa-tests-1/manifest.webmanifest" />
     <title>TEST</title>
   </head>
   <body>
@@ -15,5 +17,13 @@
       </div>
     </div>
     <script src="script.js"></script>
+    <script>
+      if (navigator.serviceWorker) {
+        navigator.serviceWorker.register (
+          '/pwa-tests-1/sw.js',
+          {scope: '/pwa-tests-1/'}
+        )
+      }
+  </script>
   </body>
 </html>
