--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="main-container">
       <h1>Test PWA</h1>
+      <input type="text" id="input" placeholder="Enter text here"/>
       <button onclick="onButtonClick1()">Click me</button>
       <div class="result-container">
         <span id="output">-</span>
