--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="result-container">
         <span id="output">-</span>
       </div>
+      <button id="install">Install</button>
     </div>
     <script src="script.js"></script>
     <script>
