hide install button when install not available

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="result-container">
         <span id="output">-</span>
       </div>
-      <button id="install">Install</button>
+      <button id="install" hidden>Install</button>
     </div>
     <script src="script.js"></script>
     <script>
