try to remove scrolling

--- a/dice/index.html
+++ b/dice/index.html
@@ -15,9 +15,12 @@
     </header>
 
     <div class="main-container">
-      <div id="die-container"></div>
-      <h3>TOTAL</h3>
-      <span id="total">0</span>
+      <div class="scroll-container">
+
+        <div id="die-container"></div>
+        <h3>TOTAL</h3>
+        <span id="total">0</span>
+      </div>
     </div>
 
     <footer class="count-container">
